--- a/TODO.txt
+++ b/TODO.txt
@@ -480,6 +480,16 @@ An explorer's pack
 
 Abilities:
 
+-------------------
+ PROF Bonus Table 
+-------------------
+Level --- Bonus ---
+1-4   ---  +2   ---
+5-8   ---  +3   ---
+9-12  ---  +4   ---
+13-16 ---  +5   ---
+17-20 ---  +6   ---
+
 LVL 1
 
 Rage
@@ -1558,6 +1568,44 @@ Any 1 Iron Martial Weapon (or) any 2 Stone Martial Weapons
 a Light Crossbow and 20 bolts (or) 2 Stone Handaxes
 a Dungeoneer's Pack (or) an Explorer's Pack
 
+Abilities:
+
+-------------------
+ PROF Bonus Table 
+-------------------
+Level --- Bonus ---
+1-4   ---  +2   ---
+5-8   ---  +3   ---
+9-12  ---  +4   ---
+13-16 ---  +5   ---
+17-20 ---  +6   ---
+
+-------------------------------------------------------------------------------------------------------------------------------------------
+                                              Spell Slot Table*
+-------------------------------------------------------------------------------------------------------------------------------------------
+Level --- Cantrips Known --- LVL 1 --- LVL 2 --- LVL 3 --- LVL 4 --- LVL 5 --- LVL 6 --- LVL 7 --- LVL 8 --- LVL 9 --- Max Spells Known ---
+  1    ---      1     ----     1   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        1         ---
+  2    ---      1     ----     1   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        2         ---
+  3    ---      1     ----     2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        3         ---
+  4    ---      1     ----     3   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        4         ---
+  5    ---      1     ----     3   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        4         ---
+  6    ---      2     ----     3   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        4         ---
+  7    ---      2     ----     4   ---   2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        5         ---
+  8    ---      2     ----     4   ---   2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        6         ---
+  9    ---      2     ----     4   ---   2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        6         ---
+  10   ---      3     ----     4   ---   3   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        7         ---
+  11   ---      3     ----     4   ---   3   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        8         ---
+  12   ---      3     ----     4   ---   3   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        8         ---
+  13   ---      3     ----     4   ---   3   ---   2   ---   0   ---   2   ---   0   ---   0   ---   0   ---   0   ---        9         ---
+  14   ---      3     ----     4   ---   3   ---   2   ---   0   ---   2   ---   0   ---   0   ---   0   ---   0   ---        10        ---
+  15   ---      3     ----     4   ---   3   ---   2   ---   0   ---   2   ---   0   ---   0   ---   0   ---   0   ---        10        ---
+  16   ---      4     ----     4   ---   3   ---   3   ---   0   ---   2   ---   0   ---   0   ---   0   ---   0   ---        11        ---
+  17   ---      4     ----     4   ---   3   ---   3   ---   0   ---   2   ---   0   ---   0   ---   0   ---   0   ---        11        ---
+  18   ---      4     ----     4   ---   3   ---   3   ---   0   ---   2   ---   0   ---   0   ---   0   ---   0   ---        11        ---
+  19   ---      4     ----     4   ---   3   ---   3   ---   1   ---   2   ---   0   ---   0   ---   0   ---   0   ---        12        ---
+  20   ---      4     ----     4   ---   3   ---   3   ---   1   ---   2   ---   0   ---   0   ---   0   ---   0   ---        13        ---
+* Fighters so not learn spells naturally.
+
 --- Monk ---
 
 Base HP: 8
@@ -1612,6 +1660,7 @@ a Dungeoneer's Pack (or) an Explorer's Pack
 10 Darts
 
 --- Paladin ---
+
 Base HP: 10
 Minimum HP: 5
 Max HP: 60
