--- a/TODO.txt
+++ b/TODO.txt
@@ -490,6 +490,32 @@ Level --- Bonus ---
 13-16 ---  +5   ---
 17-20 ---  +6   ---
 
+-------------------------------------------------------------------------------------------------------------------------------------------
+                                              Spell Slot Table*
+-------------------------------------------------------------------------------------------------------------------------------------------
+Level --- Cantrips Known --- LVL 1 --- LVL 2 --- LVL 3 --- LVL 4 --- LVL 5 --- LVL 6 --- LVL 7 --- LVL 8 --- LVL 9 --- Max Spells Known ---
+  1    ---      1     ----     0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        1         ---
+  2    ---      1     ----     0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        2         ---
+  3    ---      1     ----     1   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        3         ---
+  4    ---      1     ----     2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        4         ---
+  5    ---      1     ----     2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        4         ---
+  6    ---      2     ----     2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        4         ---
+  7    ---      2     ----     3   ---   1   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        5         ---
+  8    ---      2     ----     3   ---   1   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        6         ---
+  9    ---      2     ----     3   ---   1   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        6         ---
+  10   ---      3     ----     3   ---   2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        7         ---
+  11   ---      3     ----     3   ---   2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        8         ---
+  12   ---      3     ----     3   ---   2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        8         ---
+  13   ---      3     ----     3   ---   2   ---   1   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        9         ---
+  14   ---      3     ----     3   ---   2   ---   1   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        10        ---
+  15   ---      3     ----     3   ---   2   ---   1   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        10        ---
+  16   ---      4     ----     3   ---   2   ---   2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        11        ---
+  17   ---      4     ----     3   ---   2   ---   2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        11        ---
+  18   ---      4     ----     3   ---   2   ---   2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        11        ---
+  19   ---      4     ----     3   ---   2   ---   2   ---   1   ---   0   ---   0   ---   0   ---   0   ---   0   ---        12        ---
+  20   ---      4     ----     3   ---   2   ---   2   ---   1   ---   0   ---   0   ---   0   ---   0   ---   0   ---        13        ---
+* Barbarians so not learn spells naturally.
+
 LVL 1
 
 Rage
